[gd_scene load_steps=3 format=3 uid="uid://cpwp4xx6mv5p"]

[ext_resource type="Script" uid="uid://cfnyqq3jw8cuw" path="res://demo/client_ui.gd" id="1"]
[ext_resource type="Script" uid="uid://cws7jorypdutt" path="res://client/multiplayer_client.gd" id="2"]

[node name="ClientUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1024.0
offset_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="Client" type="Node" parent="."]
script = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Connect" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Connect"]
layout_mode = 2
text = "Connect to:"

[node name="Host" type="LineEdit" parent="VBoxContainer/Connect"]
layout_mode = 2
size_flags_horizontal = 3
text = "ws://localhost:9080"

[node name="Room" type="Label" parent="VBoxContainer/Connect"]
layout_mode = 2
size_flags_vertical = 5
text = "Room"

[node name="RoomSecret" type="LineEdit" parent="VBoxContainer/Connect"]
layout_mode = 2
placeholder_text = "secret"

[node name="Mesh" type="CheckBox" parent="VBoxContainer/Connect"]
layout_mode = 2
button_pressed = true
text = "Mesh"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Stop" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Stop"

[node name="Seal" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Seal"

[node name="Ping" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Ping"

[node name="Peers" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Print peers"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Stop" to="." method="_on_stop_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Seal" to="." method="_on_seal_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Ping" to="." method="_on_ping_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Peers" to="." method="_on_peers_pressed"]
